CHANGES
=======

0.14 (unreleased)
-----------------

0.13 (2008-04-07)
-----------------

- Made DeleteProperty a rock in the zope.security.

0.12 (2008-03-25)
-----------------

- Moved locktoken storage to a separate utility, out of a cache.
- Added events to notify caches about invalidated resources.